--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@taiga-ui/addon-charts": "^3.63.0",
+    "@taiga-ui/addon-commerce": "^3.63.0",
+    "@taiga-ui/addon-preview": "^3.63.0",
     "@taiga-ui/addon-table": "^3.63.0",
+    "@taiga-ui/addon-tablebars": "^3.63.0",
     "@taiga-ui/cdk": "^3.63.0",
     "@taiga-ui/core": "^3.63.0",
     "@taiga-ui/icons": "^3.63.0",
     "@taiga-ui/kit": "^3.63.0",
+    "@taiga-ui/layout": "^3.63.0",
     "@taiga-ui/styles": "^3.63.0",
     "@tinkoff/ng-dompurify": "4.0.0",
     "dompurify": "3.0.6",
